# elev-cop-fw

./: .clang-format  .clangd  .config  .gitignore  Kconfig  README.md  cross_file.txt  meson.build  requirements.txt
src/bsp/: Kconfig  meson.build
src/bsp/inc/: bsp.h  bsp_config.h
src/bsp/src/: bsp_init.c  bsp_timer.c
src/libs/driver/cmsis/dev/gd32f4xx/: meson.build
src/libs/driver/cmsis/dev/gd32f4xx/inc/: symbol.h  system_gd32f4xx.h
src/libs/driver/cmsis/dev/gd32f4xx/src/: reset.c
src/libs/driver/std/: Kconfig  meson.build
src/libs/driver/std/example/ADC/ADC0_ADC1_ADC2_routine_parallel/: main.c  readme.txt
src/libs/driver/std/example/ADC/ADC0_ADC1_routine_parallel/: gd32f4xx_it.c  gd32f4xx_it.h  main.c  readme.txt  systick.c
src/libs/driver/std/example/ADC/ADC0_EXTI_trigger_routine_sequence/: main.c  readme.txt  systick.h
src/libs/driver/std/example/ADC/ADC0_routine_sequence_discontinuous_mode/: main.c  readme.txt
src/libs/driver/std/example/ADC/ADC0_routine_sequence_with_DMA/: main.c  readme.txt
src/libs/driver/std/example/ADC/ADC0_software_trigger_routine_channel_polling/: main.c  readme.txt
src/libs/driver/std/example/ADC/ADC0_temperature_Vref_Vbat/: main.c  readme.txt
src/libs/driver/std/example/ADC/ADC1_analog_watchdog/: gd32f4xx_it.c  gd32f4xx_it.h  main.c  readme.txt
src/libs/driver/std/example/ADC/ADC1_resolution_oversample/: main.c  readme.txt
src/libs/driver/std/example/CAN/communication_Loopback/: gd32f4xx_it.c  gd32f4xx_it.h  main.c  readme.txt
src/libs/driver/std/example/CAN/communication_among_CANs/: gd32f4xx_it.c  main.c  readme.txt
src/libs/driver/std/example/CAN/communication_among_Devices/: gd32f4xx_it.c  gd32f4xx_it.h  main.c  readme.txt
src/libs/driver/std/example/CRC/CRC_calculate/: main.c  readme.txt
src/libs/driver/std/example/CTC/CTC_gpio/: main.c  readme.txt
src/libs/driver/std/example/CTC/CTC_lxtal/: main.c  readme.txt
src/libs/driver/std/example/DAC/DACC_independent_trigger_LFSR_noise/: main.c  readme.txt
src/libs/driver/std/example/DAC/DACC_output_voltage/: main.c  readme.txt
src/libs/driver/std/example/DAC/DACC_simultaneous_trigger_triangle_noise/: main.c  readme.txt
src/libs/driver/std/example/DAC/DACC_software_trigger_LFSR_noise/: main.c  readme.txt
src/libs/driver/std/example/DAC/DAC_ADC_convert/: gd32f4xx_it.c  gd32f4xx_it.h  main.c  readme.txt
src/libs/driver/std/example/DAC/DAC_DMA_convert/: main.c  readme.txt
src/libs/driver/std/example/DAC/DAC_EXTI_trigger/: main.c  readme.txt
src/libs/driver/std/example/DAC/DAC_LFSR_noise_mode/: main.c  readme.txt
src/libs/driver/std/example/DAC/DAC_triangle_noise_mode/: main.c  readme.txt
src/libs/driver/std/example/DBG/DBG_timer1_stop/: main.c  readme.txt  systick.c
src/libs/driver/std/example/DCI/DCI_OV2640/: dci_ov2640.c  dci_ov2640.h  dci_ov2640_init_table.h  main.c  readme.txt  sccb.c  sccb.h
src/libs/driver/std/example/DMA/Reload_exti/: gd32f4xx_it.c  gd32f4xx_it.h  main.c  main.h  readme.txt
src/libs/driver/std/example/DMA/multi_data_ram_to_ram/: main.c  readme.txt
src/libs/driver/std/example/DMA/single_data_flash_to_ram/: main.c  readme.txt
src/libs/driver/std/example/DMA/switch_buffer_mode/: main.c  readme.txt
src/libs/driver/std/example/EXMC/NAND/: exmc_nandflash.c  exmc_nandflash.h  main.c  readme.txt
src/libs/driver/std/example/EXMC/NORFLASH/: exmc_norflash.c  exmc_norflash.h  main.c  readme.txt
src/libs/driver/std/example/EXMC/SDRAM/: exmc_sdram.c  exmc_sdram.h  gd32f4xx_it.c  gd32f4xx_it.h  main.c  readme.txt
src/libs/driver/std/example/EXMC/SRAM/: exmc_sram.c  exmc_sram.h  main.c  readme.txt
src/libs/driver/std/example/EXTI/Key_external_interrupt_mode/: gd32f4xx_it.c  gd32f4xx_it.h  main.c  readme.txt
src/libs/driver/std/example/FMC/Program_erase/: fmc_operation.c  fmc_operation.h  gd32f4xx_it.c  main.c  readme.txt
src/libs/driver/std/example/FMC/Write_protection/: gd32f4xx_it.h  main.c  main.h  readme.txt
src/libs/driver/std/example/FWDGT/FWDGT_key/: gd32f4xx_it.c  gd32f4xx_it.h  main.c  readme.txt
src/libs/driver/std/example/GPIO/Keyboard_polling_mode/: main.c  readme.txt  systick.h
src/libs/driver/std/example/GPIO/Running_led/: gd32f4xx_libopt.h  main.c  readme.txt  systick.c  systick.h
src/libs/driver/std/example/I2C/I2C_EEPROM/: at24cxx.c  at24cxx.h  i2c.c  i2c.h  main.c  readme.txt  systick.h
src/libs/driver/std/example/I2C/I2C_EEPROM_dma/: at24cxx.c  at24cxx.h  i2c.c  i2c.h  main.c  readme.txt  systick.h
src/libs/driver/std/example/I2C/I2C_EEPROM_interrput/: at24cxx.c  at24cxx.h  gd32f4xx_it.c  gd32f4xx_it.h  i2c.c  i2c.h  main.c  readme.txt
src/libs/driver/std/example/I2C/Master_receiver/: main.c  readme.txt
src/libs/driver/std/example/I2C/Master_receiver&slave_transmitter/: main.c  readme.txt
src/libs/driver/std/example/I2C/Master_receiver&slave_transmitter_interrupt/: i2c0_ie.c  i2c1_ie.c  i2c_ie.h  main.c  readme.txt
src/libs/driver/std/example/I2C/Master_receiver_one_byte/: main.c  readme.txt
src/libs/driver/std/example/I2C/Master_receiver_two_bytes/: main.c  readme.txt
src/libs/driver/std/example/I2C/Master_transmitter/: main.c  readme.txt
src/libs/driver/std/example/I2C/Master_transmitter&slave_receiver/: main.c  readme.txt
src/libs/driver/std/example/I2C/Master_transmitter&slave_receiver_dma/: main.c  readme.txt
src/libs/driver/std/example/I2C/Master_transmitter&slave_receiver_interrupt/: gd32f4xx_it.c  gd32f4xx_it.h  i2c0_ie.c  i2c1_ie.c  i2c_ie.h  main.c  readme.txt
src/libs/driver/std/example/I2C/Slave_receiver/: main.c  readme.txt
src/libs/driver/std/example/I2C/Slave_transmitter/: main.c  readme.txt
src/libs/driver/std/example/IPA/IPA_2images_blend/: logo.h  logo2.h  main.c  readme.txt
src/libs/driver/std/example/IPA/IPA_image_copy/: image_copy.h  logo.h  main.c  readme.txt
src/libs/driver/std/example/IREF/IREF_provides_reference_current/: gd32f4xx_libopt.h  main.c  readme.txt
src/libs/rtos/: meson.build
src/libs/rtos/board/: board.c  meson.build
src/libs/rtos/components/: meson.build
src/libs/rtos/inc/: rtm.h
src/libs/rtos/src/: meson.build
(+616 files in other folders)
